Moved script from html to .js file, transition to nav background, fixed submit btn placement on smaller devices

--- a/resources/style.css
+++ b/resources/style.css
@@ -59,6 +59,7 @@ button {
 
 nav a:hover {
     background-color: #daa520;
+    transition: background-color 0.2s cubic-bezier(0.4, 0, 1, 1);
 }
 
 .nav-container {
@@ -284,11 +285,20 @@ textarea:focus::placeholder {
 }
 
 
-footer {
-    margin: 5em 0 auto;
+.footer-links {
+    margin-bottom: 2em;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+}
+
+.copyright {
+    margin-top: 2em;
+    padding: 0.75em;
+    text-align: center;
+    font-size: smaller;
+    color: white;
+    background-color: #291405;
 }
 
 @media only screen and (max-device-width: 768px) {
